--- a/src/styl/_variables.styl
+++ b/src/styl/_variables.styl
@@ -4,8 +4,14 @@ hover = darken(primary, 40%)
 secondary = #000
 texts = #222
 
+// FONTS
+@font-face
+  font-family Prototype
+  font-style normal
+  src url(../fonts/Prototype.ttf)
+
 // RESOLUTIONS
-cut_size = 30rem
+cut_size = 35rem
 
 // REM BASE
 ks-rem-base = 20px
